--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -60,13 +60,9 @@ div#form > h1 {
     margin-bottom: 10px;
 }
 
-div#form > p {
-    font-size: 0.8em;
-}
-
 form > div.campo {
     background-color: #111d60;
-    border: 2px solid #111d60;
+    border: 2px solid #030F26;
     display: block;
     width: 100%;
     height: 40px;
@@ -90,12 +86,6 @@ div.campo > input, textarea {
     padding: 4px;
     
 }
-
-div.campo > input:focus-within, textarea:focus-within {
-    background-color: white;
-    border: none;
-}
-
 
 form > #enviar {
     display: block; /*Linha só*/
